--- a/res/drawable/info_window.xml
+++ b/res/drawable/info_window.xml
@@ -17,6 +17,7 @@
 	    android:layout_height="wrap_content"
 	    android:padding="8dp"
 	    android:text="Crear ficha"
+	    android:drawableLeft="@drawable/add_btn"
 	    android:textSize="18sp"/>
     
     <Button
@@ -25,6 +26,7 @@
 	    android:layout_height="wrap_content"
 	    android:padding="8dp"
 	    android:text="Ver detalle ficha"
+	    android:drawableLeft="@drawable/column_one"
 	    android:textSize="18sp"/>
 
 </LinearLayout>
