--- a/res/layout/menu_activity.xml
+++ b/res/layout/menu_activity.xml
@@ -131,7 +131,11 @@
                 android:onClick="mantenimiento_usuarios"
                 android:src="@drawable/usuarios"/>
             
-            <ImageButton
+
+
+        </TableRow>
+        <TableRow>
+                        <ImageButton
                 android:id="@+id/mapa"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -142,7 +146,6 @@
                 android:background="#FFFFFF"
                 android:onClick="lanzar"
                 android:src="@drawable/gps"/>
-
         </TableRow>
 	    </TableLayout>
 	    <LinearLayout
